* Guarantee a wand of cancellation in the Castle chest that can be used for
  blanking scrolls and potions.
* The shield of reflection now weighs 50 (was 75) due to the introduction of the
  new shield skill.
* Wielding or unwielding a weapon of stealth identifies the stealth property on
  that weapon and gives identifying messages similar to wearing other items that
  grant stealth.
* Improve stacking of random candles by removing random chance of them being
  blessed or cursed (from AceHack).  Between wax and tallow candles, and
  blessed, uncursed and cursed status, an inventory could be filled with 6
  different candle stacks, even with DynaHack's improved item stacking!
* Grant +1 to-hit for all short swords.
* Allow knife and stiletto as possible tin-opening tools (from K-Mod).
* The "magical" prefix on items is only omitted once all properties on it have
  been identified instead of once any of them have been, making it easier to
  discover items that have more than one property.
* Fix prefixes like "magical" and "prize" not appearing on rings, wands,
  spellbooks and iron balls under certain circumstances.
* Fix C343-146: "Unseen wand of striking becomes known if zapped by unseen
  monster and it hits a door."
* Fix wielding of a cockatrice corpse bare-handed while wearing chromatic dragon
  scales or scale mail not triggering petrification.
* Fix leaking of descriptions of prizes selected from level memory with far-look
  after the prize itself has vanished.
* Fix contents of containers created on special levels not being included in the
  initial container weight.

Monsters
--------
* Instant petrification completely replaced with delayed petrification: you will
  always have a few turns to save yourself from instant death.
* Drowning attacks give two turns for players to react before instant death (was
  one turn); a monster "pulls you towards the water" before it drowns you.
* Metallivores and disintegrators can eat through iron bars (from UnNetHack).