@@ -1055,7 +1055,7 @@ static int mbhitm(struct monst *mtmp, struct obj *otmp)
 			pline("Boing!");
 		} else if (rnd(20) < 10+find_mac(mtmp)) {
 			tmp = dice(2,12);
-			hit("wand", mtmp, exclam(tmp));
+			hit("wand", FALSE, mtmp, exclam(tmp));
 			resist(mtmp, otmp->oclass, tmp, TELL);
 			if (cansee(mtmp->mx, mtmp->my) && zap_oseen)
 				makeknown(WAN_STRIKING);
